--- a/package.json
+++ b/package.json
@@ -3,52 +3,54 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-      "postinstall": "husky",
-      "deploy": "npx hardhat run deploy/deploy.js --network testnet",
-      "format": "yarn prettier --write .",
-      "docs": "yarn hardhat docgen",
-      "prepare": "husky"
+    "postinstall": "husky",
+    "deploy": "npx hardhat run deploy/deploy.js --network testnet",
+    "format": "yarn prettier --write .",
+    "docs": "yarn hardhat docgen",
+    "prepare": "husky"
   },
   "lint-staged": {
-      "*.sol": "forge fmt",
-      "*.{ts}": "prettier --write"
+    "*.sol": "forge fmt",
+    "*.{ts}": "prettier --write"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-      "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
-      "@nomicfoundation/hardhat-ethers": "^3.0.0",
-      "@nomicfoundation/hardhat-foundry": "^1.1.2",
-      "@nomicfoundation/hardhat-ignition": "^0.15.0",
-      "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
-      "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
-      "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-      "@nomicfoundation/hardhat-verify": "^2.0.0",
-      "@nomiclabs/hardhat-solhint": "^4.0.1",
-      "@openzeppelin/contracts": "5.0.2",
-      "@openzeppelin/contracts-upgradeable": "5.0.2",
-      "@openzeppelin/hardhat-upgrades": "^3.1.1",
-      "@typechain/ethers-v6": "^0.5.0",
-      "@typechain/hardhat": "^9.0.0",
-      "@types/chai": "^4.2.0",
-      "@types/mocha": ">=9.1.0",
-      "@types/node": ">=18.0.0",
-      "chai": "^4.2.0",
-      "dotenv": "^16.4.5",
-      "ethers": "^6.4.0",
-      "hardhat": "^2.22.5",
-      "hardhat-abi-exporter": "^2.10.1",
-      "hardhat-contract-sizer": "^2.10.0",
-      "hardhat-gas-reporter": "^1.0.8",
-      "husky": "^9.1.6",
-      "lint-staged": "^15.2.10",
-      "prettier": "^3.3.2",
-      "prettier-plugin-solidity": "^1.3.1",
-      "solidity-coverage": "^0.8.0",
-      "solidity-docgen": "^0.6.0-beta.36",
-      "ts-node": ">=8.0.0",
-      "typechain": "^8.3.0",
-      "typescript": ">=4.5.0"
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-foundry": "^1.1.2",
+    "@nomicfoundation/hardhat-ignition": "^0.15.0",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@nomiclabs/hardhat-solhint": "^4.0.1",
+    "@openzeppelin/contracts": "5.0.2",
+    "@openzeppelin/contracts-upgradeable": "5.0.2",
+    "@openzeppelin/hardhat-upgrades": "^3.1.1",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^9.0.0",
+    "@types/chai": "^4.2.0",
+    "@types/mocha": ">=9.1.0",
+    "@types/node": ">=18.0.0",
+    "chai": "^4.2.0",
+    "dotenv": "^16.4.5",
+    "ethers": "^6.4.0",
+    "hardhat": "^2.22.5",
+    "hardhat-abi-exporter": "^2.10.1",
+    "hardhat-contract-sizer": "^2.10.0",
+    "hardhat-gas-reporter": "^1.0.8",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.2",
+    "prettier-plugin-solidity": "^1.3.1",
+    "solidity-coverage": "^0.8.0",
+    "solidity-docgen": "^0.6.0-beta.36",
+    "ts-node": ">=8.0.0",
+    "typechain": "^8.3.0",
+    "typescript": ">=4.5.0",
+    "viem": "2.x",
+    "wagmi": "^2.11.3"
   }
 }
