--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@ethersproject/providers": "^5.7.2",
     "@tanstack/react-query": "^5.51.23",
     "@web3modal/wagmi": "^5.0.11",
+    "@rainbow-me/rainbowkit": "^2.1.6",
     "ethers": "^6.13.2",
     "next": "14.2.5",
     "react": "^18",
